INSPECTIT-452: GC output to a log file